sigh.  find on MacOS doesnt have printf, so must use -ls

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -232,12 +232,14 @@ extra_env_2=IFDH_CP_EXTRA
 cp_cmd=dd bs=512k %(extra)s if=%(src)s of=%(dst)s
 cp_r_cmd=cp -r %(extra)s %(src)s %(dst)s
 lss_size_last=0
-lss_dir_last=1
+lss_dir_last=0
 lss_skip=0
-lss_cmd=find %(src)s -maxdepth 1 \( -type d -printf '%s %p/\n' -o -printf '%s %p\n' \) 
+lss_cmd=find %(src)s -maxdepth 1 -ls
 ll_cmd=find %(src)s -maxdepth %(recursion_depth)s -ls
-lss_re1 = \s*([0-9]+)\s(/.*/)(.*)(/)$
-lss_re2 = \s*([0-9]+)\s(/.*/)(.*)()$
+lss_re1 = \s*[0-9]*\s*[0-9]*\s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*([0-9]*)\s[A-Z].{11}\s*(_*)([^/]*)$
+lss_re2 = \s*[0-9]*\s*[0-9]*\s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s*[A-Z].{11}\s*(/.*/)([^/]*)$
+#lss_re1 = \s*([0-9]+)\s(/.*/)(.*)(/)$
+#lss_re2 = \s*([0-9]+)\s(/.*/)(.*)()$
 mv_cmd=mv %(src)s %(dst)s
 chmod_cmd=chmod %(mode)s %(src)s
 mkdir_cmd=mkdir %(src)s
@@ -292,8 +294,8 @@ lss_cmd=printenv | sort > /dev/tty; uberftp -ls %(src)s
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
-lss_re1 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s*(_*)([^/]*)$
-lss_re2 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s*[A-Z].{11}\s*(/.*/)([^/]*)$
+lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s*(_*)([^/]*)\s*$
+lss_re2 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s*[A-Z].{11}\s*(/.*/)([^/]*)\s*$
 ll_cmd=uberftp -ls %(r)s %(src)s
 mv_cmd=dst="%(dst)s";  uberftp -rename %(src)s /${dst\#*://*/}
 chmod_cmd=uberftp -chmod %(mode)s  %(src)s
@@ -328,7 +330,7 @@ lss_cmd=gfal-ls -l %(src)s
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
-lss_re1 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/ 	]*)[ 	]*$
+lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/ 	]*)[ 	]*$
 ll_cmd=gfal-ls -l %(src)s
 mv_cmd=gfal-rename %(src)s %(dst)s
 chmod_cmd=gfal-chmod %(mode)s %(src)s
@@ -349,7 +351,7 @@ lss_cmd=xrdwrap.sh ls -l %(src)s
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
-lss_re1 = ([-dl])[-rwxs]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/]*)$
+lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/]*)$
 ll_cmd=xrdwrap.sh ls -l %(r)s %(src)s
 mv_cmd=xrdwrap.sh mv %(src)s %(dst)s
 chmod_cmd=xrdwrap.sh chmod %(mode)s %(src)s
