--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -236,8 +236,8 @@ lss_dir_last=0
 lss_skip=0
 lss_cmd=find %(src)s -maxdepth 1 -ls
 ll_cmd=find %(src)s -maxdepth %(recursion_depth)s -ls
-lss_re1 = \s*[0-9]*\s*[0-9]*\s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*([0-9]*)\s[A-Z].{11}\s*(_*)([^/]*)$
-lss_re2 = \s*[0-9]*\s*[0-9]*\s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s*[A-Z].{11}\s*(/.*/)([^/]*)$
+lss_re1 = \s*[0-9]*\s*[0-9]*\s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*([0-9]*)\s[A-Z].{11}\s*(_*)([^/]*)\s*$
+lss_re2 = \s*[0-9]*\s*[0-9]*\s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s*[A-Z].{11}\s*(/.*/)([^/]*)\s*$
 #lss_re1 = \s*([0-9]+)\s(/.*/)(.*)(/)$
 #lss_re2 = \s*([0-9]+)\s(/.*/)(.*)()$
 mv_cmd=mv %(src)s %(dst)s
