exitCodes.py all passes now.

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -339,7 +339,7 @@ mv_cmd=gfal-rename %(src)s %(dst)s
 chmod_cmd=gfal-chmod %(mode)s %(src)s
 mkdir_cmd=gfal-mkdir %(src)s
 rm_cmd=gfal-rm %(src)s
-rmdir_cmd=gfal-rm %(src)s
+rmdir_cmd=gfal-rm -r %(src)s
 pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
 
 
@@ -354,7 +354,8 @@ lss_cmd=xrdwrap.sh ls -l %(src)s
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
-lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s()([^/]*)$
+# drwx 2016-03-30 17:17:30         512 /pnfs/fnal.gov/usr/nova/scratch/users/mengel/tdest4
+lss_re1 = ([-dl])[-rwxst]{3}\s*[0-9].{18}\s*([0-9]*)\s*(.*/)([^/]*)$
 ll_cmd=xrdwrap.sh ls -l %(r)s %(src)s
 mv_cmd=xrdwrap.sh mv %(src)s %(dst)s
 chmod_cmd=xrdwrap.sh chmod %(mode)s %(src)s
