sigh, silliness in config, failed with files starting with underscore on gsiftp ls calls

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -236,7 +236,7 @@ lss_dir_last=0
 lss_skip=0
 lss_cmd=find %(src)s -maxdepth 1 -ls
 ll_cmd=find %(src)s -maxdepth %(recursion_depth)s -ls
-lss_re1 = \s*[0-9]*\s*[0-9]*\s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*([0-9]*)\s[A-Z].{11}\s*(_*)([^/]*)\s*$
+lss_re1 = \s*[0-9]*\s*[0-9]*\s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*([0-9]*)\s[A-Z].{11}\s*()([^/]*)\s*$
 lss_re2 = \s*[0-9]*\s*[0-9]*\s*([-dl])[-rwxst]{9}\s*[0-9]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s*[A-Z].{11}\s*(/.*/)([^/]*)\s*$
 #lss_re1 = \s*([0-9]+)\s(/.*/)(.*)(/)$
 #lss_re2 = \s*([0-9]+)\s(/.*/)(.*)()$
@@ -297,7 +297,7 @@ lss_fake_popen = 1
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
-lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s*(_*)([^/]*)\s*$
+lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s*()([^/]*)\s*$
 lss_re2 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s*[A-Z].{11}\s*(/.*/)([^/]*)\s*$
 ll_cmd=uberftp -ls %(r)s %(src)s
 mv_cmd=dst="%(dst)s";  uberftp -rename %(src)s /${dst\#*://*/}
