--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -25,8 +25,7 @@ test=-x /usr/bin/gfal-copy
 rename_proto=srm-gfal: srm:
 
 [conditional macos]
-#test=-x /usr/bin/update_dyld_shared_cache
-test=-x /bin/true
+test=-x /usr/bin/update_dyld_shared_cache
 rename_proto=gsiftp-apple: gsiftp:
 
 
