--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -274,8 +274,8 @@ lss_fake_popen = 1
 lss_skip=1
 lss_size_last=0
 lss_dir_last=1
-lss_re1= \s*()()([^/]*)(/)$
-lss_re2= \s*()()([^/]*)()$
+lss_re1= \s*()()([^/ ]*)(/) *$
+lss_re2= \s*()()([^/ ]*)() *$
 ll_cmd=globus-url-copy -list %(src)s
 mv_cmd=false
 chmod_cmd=false
