better door rotation -- woo hoo!

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -4,9 +4,9 @@ EXPERIMENT=(annie|argoneut|auger|btev|captmnv|cdms|cepa|chips|ckm|coupp|cpad|dar
 
 [general]
 conditionals=gfal macos smu_onsite
-rotations=stken_gsiftp
+rotations=stken_gsiftp cdfen_gsiftp
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot:
-prefixes=D0: /pnfs/dzero /pnfs/cdfen /pnfs /scratch/users/ /%(EXPERIMENT)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// /
+prefixes=D0: /pnfs/dzero /pnfs/cdfen/ /pnfs /scratch/users/ /%(EXPERIMENT)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// /
 
 [experiment_vo]
 numrules=5
@@ -52,7 +52,7 @@ slashstrip=2
 
 [prefix /pnfs/cdfen/]
 location=dcache_cdfen
-slashstrip=1
+slashstrip=3
 
 [prefix srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/]
 location=dcache_cdfen
@@ -67,7 +67,7 @@ location= dcache_dzero
 slashstrip=2
 
 [prefix srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/]
-location=dcache_d0en
+location=dcache_dzero
 slashstrip=8
 
 [prefix gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/]
@@ -146,9 +146,14 @@ need_cpn_lock=0
 protocols=i:
 prefix_i=
 
+[rotation cdfen_gsiftp]
+door_proto=gsiftp
+door_repl_re=gsiftp://(cdfdca1|fcdfdcache)[^/]*.fnal.gov
+lookup_door_uri=http://cdfdca.fnal.gov:2288/info/doors
+default_doors= fcdfdcache21.fnal.gov fcdfdcache22.fnal.gov fcdfdcache23.fnal.gov
+
 [location dcache_cdfen]
 need_cpn_lock=0
-#lookup_door_uri=http://cdfdca.fnal.gov:2288/info/doors
 protocols=gsiftp: srm: root:
 prefix_file=/pnfs/cdfen/
 prefix_gsiftp=gsiftp://cdfdca1.fnal.gov/pnfs/fnal.gov/usr/cdfen/
@@ -181,13 +186,13 @@ prefix_file=
 
 [location dcache_dzero]
 need_cpn_lock=0
-#lookup_door_uri=http://d0dca.fnal.gov:2288/info/doors
 protocols=gsiftp: srm: root:
 prefix_file=/pnfs/dzero
 prefix_gsiftp=gsiftp://d0dca1.fnal.gov/pnfs/fnal.gov/usr/dzero
 prefix_srm=srm://d0dca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/dzero
 prefix_root=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
 prefix_xroot=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
+
 
 [rotation stken_gsiftp]
 door_proto=gsiftp
