prefer local bin, lib to cvmfs so we don't mix gfal libs, etc.

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -132,7 +132,18 @@ slashstrip=0
 
 [location local_fs]
 need_cpn_lock=0
-protocols=file:
+# was:
+# protocols=file:
+# do we need this?
+protocols=file: srm: gsiftp: http: https: s3: ucondb: gs:
+prefix_file=
+prefix_http=
+prefix_https=
+prefix_s3=
+prefix_gs=
+prefix_ucondb=
+prefix_gsiftp=file:///
+prefix_srm=file:///
 
 [location bluearc]
 need_cpn_lock=1
@@ -352,7 +363,7 @@ pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
 need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_SRM_EXTRA
-cp_cmd=gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s
+cp_cmd=echo $LD_LIBRARY_PATH && gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s
 lss_cmd=gfal-ls -l %(src)s
 lss_skip=0
 lss_size_last=0
