--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -214,6 +214,8 @@ default_doors=stkendca01a.fnal.gov stkendca02a.fnal.gov stkendca03a.fnal.gov stk
 [location dcache_stken]
 need_cpn_lock=0
 protocols=gsiftp: srm: root: https:
+lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
+door_repl_re=://(stkendca|fndca)[^/]*.fnal.gov
 prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://fndca1.fnal.gov/pnfs/fnal.gov/usr/
 prefix_srm=srm://fndca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/
@@ -363,7 +365,7 @@ pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
 need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_SRM_EXTRA
-cp_cmd=echo $LD_LIBRARY_PATH && gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s
+cp_cmd=gfal-copy -f --just-copy -t 14400 %(extra)s %(src)s %(dst)s
 lss_cmd=gfal-ls -l %(src)s
 lss_skip=0
 lss_size_last=0
