--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -1,12 +1,14 @@
 
 [macros]
 EXPERIMENT=(annie|argoneut|auger|btev|captmnv|cdms|cepa|chips|ckm|coupp|cpad|darkside|des|ds50|e990|dune|geant4|gm2|GM2|genie|icarus|lar1nd|lariat|lartpc|lbne|lbnewc|minerva|miniboone|mu2e|noble|nova|numix|nusoft|patriot|sbnd|sciboone|seaquest|Simons|uboone)
+EXPERIMENT_LOCK=(annie|argoneut|cdms|coupp|darkside|des|ds50|dune|gm2|lar1nd|lariat|lbne|mu2e|nova|numix|sbnd|seaquest|uboone)
+EXPERIMENT_NOLOCK=(auger|btev|captmnv|cepa|chips|ckm|cpad|e990|geant4|GM2|genie|icarus|lartpc|lbnewc|minerva|miniboone|noble|nusoft|patriot|sciboone|Simons)
 
 [general]
 conditionals=gfal macos smu_onsite
 rotations=stken_gsiftp cdfen_gsiftp
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot:
-prefixes=D0: /pnfs/dzero /pnfs/cdfen/ /pnfs /scratch/users/ /%(EXPERIMENT)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// /
+prefixes=D0: /pnfs/dzero /pnfs/cdfen/ /pnfs /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// /
 
 [experiment_vo]
 numrules=5
@@ -30,11 +32,19 @@ test=-x /usr/bin/update_dyld_shared_cache
 rename_proto=gsiftp-apple: gsiftp:
 
 
-[prefix /%(EXPERIMENT)s/]
+[prefix /%(EXPERIMENT_NOLOCK)s/]
+location=bluearc_nolock
+slashstrip=0
+
+[prefix /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/]
+location=bluearc_nolock
+slashstrip=0
+
+[prefix /%(EXPERIMENT_LOCK)s/]
 location=bluearc
 slashstrip=0
 
-[prefix /grid/(app|data|fermiapp)/%(EXPERIMENT)s/]
+[prefix /grid/(app|data|fermiapp)/%(EXPERIMENT_LOCK)s/]
 location=bluearc
 slashstrip=0
 
@@ -147,6 +157,13 @@ prefix_srm=file:///
 
 [location bluearc]
 need_cpn_lock=1
+protocols=file: gsiftp: srm:
+prefix_file=
+prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
+prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
+
+[location bluearc_nolock]
+need_cpn_lock=0
 protocols=file: gsiftp: srm:
 prefix_file=
 prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
