--- a/ifdh/Makefile
+++ b/ifdh/Makefile
@@ -9,7 +9,7 @@ SHLIB=so
 endif
 LIB=libifdh.$(SHLIB)
 HDR=ifdh.h
-SWIGCXXFLAGS=-fPIC -I../util -I../numsg -I../../util -I../../numsg -I../../ifdh -g -I$${PYTHON_INCLUDE:-`echo /usr/include/python*`} $(ARCH)
+SWIGCXXFLAGS=-fPIC -I../util -I../numsg -I../../util -I../../numsg -I../../ifdh -g -I$${PYTHON_INCLUDE:-`echo $${VIRTUAL_ENV:-/usr}/include/python*`} $(ARCH)
 CXXFLAGS=-pedantic-errors -Wall -Wextra -Werror -fPIC -I../../util -I../util -I ../../numsg -I../numsg -g  $(ARCH) -I$(SRCDIR)
 OBJ=ifdh.o ifdh_cp.o
 ALL_OBJS=$(OBJ) ../util/WebAPI.o ../numsg/numsg.o ../util/SyslogAPI.o ../util/utils.o ../util/regwrap.o ../util/Checksum.o ../util/WimpyConfigParser.o
@@ -61,7 +61,7 @@ ifdh_wrap.cxx: ifdh.h
 
 ifdh_wrap.cxx: ifdh.i 
 	test -d python || mkdir python
-	swig -python -c++ -o ifdh_wrap.cxx $< || (cp ifdh_wrap.cxx.fallback ifdh_wrap.cxx && cp ifdh.py.fallback ifdh.py)
+	swig $(SWIGOPTS) -python -c++ -o ifdh_wrap.cxx $< || (cp ifdh_wrap.cxx.fallback ifdh_wrap.cxx && cp ifdh.py.fallback ifdh.py)
 	set -x ; python -V 2>&1 | grep ' 2.[67]' > /dev/null && rpm -qf /usr/bin/swig | grep 1.3.[42][90] && (patch -p0 < ifdh_wrap.patch ||  patch -p0 < ../../ifdh/ifdh_wrap.patch) || true
 	mv ifdh.py python/ifdh.py
 
