--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -161,7 +161,7 @@ protocols=file: gsiftp: srm:
 prefix_file=
 prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
 prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
-can_stat=file://
+#can_stat=file://
 
 [location bluearc_nolock]
 need_cpn_lock=0
@@ -169,7 +169,7 @@ protocols=file: gsiftp: srm:
 prefix_file=
 prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
 prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
-can_stat=file://
+#can_stat=file://
 
 [location bluearc_nolock]
 need_cpn_lock=0
