/grid/fermiapp fix

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -8,7 +8,7 @@ EXPERIMENT_NOLOCK=(auger|btev|captmnv|cepa|chips|ckm|cpad|e990|geant4|GM2|genie|
 conditionals=gfal macos smu_onsite
 rotations=stken_gsiftp cdfen_gsiftp
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot:
-prefixes=D0: /pnfs/dzero /pnfs/cdfen/ /pnfs /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// /
+prefixes=D0: /pnfs/dzero /pnfs/cdfen/ /pnfs /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// /
 
 [experiment_vo]
 numrules=5
@@ -170,20 +170,6 @@ prefix_file=
 prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
 prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
 #can_stat=file://
-
-[location bluearc_nolock]
-need_cpn_lock=0
-protocols=file: gsiftp: srm:
-prefix_file=
-prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
-prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
-
-[location bluearc_nolock]
-need_cpn_lock=0
-protocols=file: gsiftp: srm:
-prefix_file=
-prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
-prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
 
 [location generic_irods]
 need_cpn_lock=0
