debugging checker, related cfg fixes for issue #16503

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -8,7 +8,7 @@ EXPERIMENT_NOLOCK=(auger|btev|captmnv|cepa|chips|ckm|cpad|e990|geant4|GM2|genie|
 conditionals=gfal macos smu_onsite
 rotations=stken_gsiftp cdfen_gsiftp
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot:
-prefixes=D0: /pnfs/dzero /pnfs/cdfen/ /pnfs /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// /
+prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ /pnfs /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// /
 
 [experiment_vo]
 numrules=5
@@ -30,7 +30,6 @@ rename_proto=srm-gfal: srm:
 [conditional macos]
 test=-x /usr/bin/update_dyld_shared_cache
 rename_proto=gsiftp-apple: gsiftp:
-
 
 [prefix /%(EXPERIMENT_NOLOCK)s/]
 location=bluearc_nolock
@@ -96,11 +95,11 @@ slashstrip=6
 location= dcache_stken
 slashstrip=4
 
-[prefix root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr]
+[prefix root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/]
 location= dcache_stken
 slashstrip=6
 
-[prefix xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr]
+[prefix xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/]
 location= dcache_stken
 slashstrip=6
 
@@ -171,6 +170,10 @@ prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
 prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
 #can_stat=file://
 
+[prefix i://]
+location = generic_irods
+slashstrip = 0 
+
 [location generic_irods]
 need_cpn_lock=0
 protocols=i:
@@ -192,14 +195,14 @@ prefix_root=root://cdfdca1.fnal.gov:1094/pnfs/fnal.gov/usr/cdfen/
 prefix_xroot=root://cdfdca1.fnal.gov:1094/pnfs/fnal.gov/usr/cdfen/
 
 # ----------------------
-# section to make /scratch/users go through gridftp door at smu
+# section to make /scratch/users/ go through gridftp door at smu
 # anywhere else its just another local filesystem
 #
 [conditional smu_onsite]
 test=-H *.smu.edu
 rename_loc=smuscratch-onsite smuscratch
 
-[prefix /scratch/users]
+[prefix /scratch/users/]
 slashstrip=0
 location=smuscratch
 
@@ -217,7 +220,7 @@ prefix_file=
 [location dcache_dzero]
 need_cpn_lock=0
 protocols=gsiftp: srm: root:
-prefix_file=/pnfs/dzero
+prefix_file=/pnfs/dzero/
 prefix_gsiftp=gsiftp://d0dca1.fnal.gov/pnfs/fnal.gov/usr/dzero
 prefix_srm=srm://d0dca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/dzero
 prefix_root=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
@@ -256,7 +259,7 @@ prefix_gs=
 [location generic_d0_scp]
 need_cpn_lock=0
 protocols=D0:
-prefix_i=
+prefix_D0=
 
 [location generic_root]
 need_cpn_lock=0
@@ -267,8 +270,8 @@ prefix_xroot=
 [location generic_http]
 need_cpn_lock=0
 protocols=http: https:
-prefix_root=
-prefix_xroot=
+prefix_http=
+prefix_https=
 
 [location generic_se]
 need_cpn_lock=0
