--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -8,7 +8,7 @@ EXPERIMENT_NOLOCK=(auger|btev|captmnv|cepa|chips|ckm|cpad|e990|geant4|GM2|genie|
 conditionals=gfal macos smu_onsite
 rotations=stken_gsiftp cdfen_gsiftp
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot:
-prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ /pnfs /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// /
+prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ /pnfs /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
 
 [experiment_vo]
 numrules=5
@@ -129,6 +129,10 @@ slashstrip=0
 
 [prefix srm://]
 location=generic_se
+slashstrip=0
+
+[prefix ucondb:]
+location=generic_http
 slashstrip=0
 
 [prefix http://]
@@ -269,9 +273,10 @@ prefix_xroot=
 
 [location generic_http]
 need_cpn_lock=0
-protocols=http: https:
+protocols=http: https: ucondb:
 prefix_http=
 prefix_https=
+prefix_ucondb=
 
 [location generic_se]
 need_cpn_lock=0
@@ -304,6 +309,7 @@ chmod_cmd=chmod %(mode)s %(src)s
 mkdir_cmd=mkdir %(src)s
 rm_cmd=rm %(src)s
 rmdir_cmd=rmdir %(src)s
+pin_cmd=false
 
 [protocol i:]
 need_proxy=1
@@ -313,13 +319,17 @@ cp_cmd=icp %(extra)s %(src)s %(dst)s
 lss_cmd=ils  %(src)s
 lss_skip=0
 lss_size_last=0
+lss_dir_last=0
 ll_cmd=ils -l %(recusion_flag)s %(src)s
+# this needs fixing
+lss_re1=(.*) (.*)  
 mv_cmd=imv %(src)s %(dst)s
 chmod_cmd=ichmod %(mode)s %(src)s
-mkdir_cmd=
-rm_cmd=
-rmdir_cmd=
-pin_cmd=
+cp_r_cmd=false
+mkdir_cmd=false
+rm_cmd=false
+rmdir_cmd=false
+pin_cmd=false
 
 [protocol gsiftp-apple:]
 need_proxy=1
@@ -364,6 +374,7 @@ chmod_cmd=uberftp -chmod %(mode)s  %(src)s
 mkdir_cmd=uberftp -mkdir  %(src)s
 rm_cmd=uberftp -rm  %(src)s
 rmdir_cmd=uberftp -rmdir  %(src)s
+pin_cmd=false
 
 [protocol srm:]
 need_proxy=1
@@ -382,6 +393,7 @@ mkdir_cmd=srmmkdir %(src)s
 rm_cmd=srmrm %(src)s
 rmdir_cmd=srmrmdir %(src)s
 pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
+cp_r_cmd=false
 
 [protocol srm-gfal:]
 need_proxy=1
@@ -400,7 +412,7 @@ mkdir_cmd=gfal-mkdir %(src)s
 rm_cmd=gfal-rm %(src)s
 rmdir_cmd=gfal-rm -r %(src)s
 pin_cmd=srm-bring-online --lifetime=%(secs)s %(src)s
-
+cp_r_cmd=false
 
 [protocol root:]
 need_proxy=1
@@ -421,9 +433,14 @@ chmod_cmd=xrdwrap.sh chmod %(mode)s %(src)s
 mkdir_cmd=xrdwrap.sh mkdir %(src)s
 rm_cmd=xrdwrap.sh rm %(src)s
 rmdir_cmd=xrdwrap.sh rmdir %(src)s
+cp_r_cmd=false
+pin_cmd=false
 
 [protocol xroot:]
 alias=root:
+
+[protocol ucondb:]
+alias=https:
 
 [protocol gs:]
 need_google_token=1
@@ -482,7 +499,13 @@ lss_skip=0
 lss_size_last=1
 lss_dir_last=1
 lss_re1 = (/.*/)([^/]*)\s([0-9]+)\s*$
+ll_cmd=www_cp.sh --ls %(src)s
 mv_cmd=www_cp.sh --mv %(src)s %(dst)s
+cp_r_cmd=false
+chmod_cmd=false
+rm_cmd=false
+rmdir_cmd=false
+pin_cmd=false
 
 [protocol http:]
 alias=https:
@@ -495,6 +518,7 @@ lss_size_last=0
 lss_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "find ${srcp} -maxdepth 1 \( -type d -printf '%s %p/\n' -o -printf '%s %p\n' \)"
 lss_re1 = \s*([0-9]+)\s(/.*/)(.*)(/)$
 lss_re2 = \s*([0-9]+)\s(/.*/)(.*)()$
+lss_dir_last=0
 lss_skip=0
 lss_size_last=0
 lss_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "find ${srcp} -maxdepth 1 \( -type d -printf '%s %p/\n' -o -printf '%s %p\n' \)"
@@ -504,3 +528,5 @@ chmod_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh $
 mkdir_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "mkdir ${srcp}"
 rm_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "rm ${srcp}"
 rmdir_cmd=src="%(src)s"; src=${src\#D0:}; srch=${src%:/*} srcp=${src\#*:}; ssh ${srch} "rmdir ${srcp}"
+cp_r_cmd=false
+pin_cmd=false
