--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -1,4 +1,3 @@
-
 [macros]
 EXPERIMENT=(annie|argoneut|auger|btev|captmnv|cdms|cepa|chips|ckm|coupp|cpad|darkside|des|ds50|e990|dune|geant4|gm2|GM2|genie|icarus|lar1nd|lariat|lartpc|lbne|lbnewc|minerva|miniboone|mu2e|noble|nova|numix|nusoft|patriot|sbnd|sciboone|seaquest|Simons|uboone)
 EXPERIMENT_LOCK=(annie|argoneut|cdms|coupp|darkside|des|ds50|dune|gm2|lar1nd|lariat|lbne|mu2e|nova|numix|sbnd|seaquest|uboone)
@@ -39,7 +38,7 @@ slashstrip=0
 location=bluearc_nolock
 slashstrip=0
 
-[prefix /%(EXPERIMENT_LOCK)s/]
+[prefix /%(EXPERIMINT_LOCK)s/]
 location=bluearc
 slashstrip=0
 
@@ -172,7 +171,7 @@ prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
 
 [prefix i://]
 location = generic_irods
-slashstrip = 0 
+slashstrip = 0
 
 [location generic_irods]
 need_cpn_lock=0
@@ -370,12 +369,12 @@ need_proxy=1
 strip_file_prefix=0
 extra_env=IFDH_SRM_EXTRA
 cp_cmd=lcg-cp  --sendreceive-timeout 14400 -b -D srmv2 %(extra)s %(src)s %(dst)s
-lss_cmd=srmls -2 -count=8192 %(src)s 
+lss_cmd=srmls -2 -count=8192 %(src)s
 lss_skip=0
 lss_size_last=0
 lss_dir_last=1
 lss_re1 = \s*([0-9]+)\s(/.*/)([^ /]*)(/?) *$
-ll_cmd=srmls -2 -count=8192 --recursion_depth=%(recursion_depth) --long %(src)s 
+ll_cmd=srmls -2 -count=8192 --recursion_depth=%(recursion_depth) --long %(src)s
 mv_cmd=srmmv -2 %(src)s %(dst)s
 chmod_cmd=srm-set-permissions --owner=%(obits)s --group=%(gbits)s --other=%(obits)s %(src)s
 mkdir_cmd=srmmkdir %(src)s
