added eos to config...

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -8,7 +8,7 @@ EXPERIMENT_NOLOCK=(auger|btev|captmnv|cepa|chips|ckm|cpad|e990|geant4|GM2|genie|
 conditionals=gfal macos smu_onsite
 rotations=stken_gsiftp cdfen_gsiftp
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot:
-prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ /pnfs /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
+prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ /pnfs/ /eos/ /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
 
 [experiment_vo]
 numrules=5
@@ -31,11 +31,15 @@ rename_proto=srm-gfal: srm:
 test=-x /usr/bin/update_dyld_shared_cache
 rename_proto=gsiftp-apple: gsiftp:
 
-[prefix /%(EXPERIMENT_NOLOCK)s/]
-location=bluearc_nolock
+[prefix /eos/]
+location=cern_eos
 slashstrip=0
 
 [prefix /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/]
+location=bluearc_nolock
+slashstrip=0
+
+[prefix /%(EXPERIMENT_NOLOCK)s/]
 location=bluearc_nolock
 slashstrip=0
 
@@ -103,7 +107,7 @@ slashstrip=6
 location= dcache_stken
 slashstrip=6
 
-[prefix /pnfs]
+[prefix /pnfs/]
 location= dcache_stken
 slashstrip=2
 
@@ -236,6 +240,11 @@ door_proto=gsiftp
 door_repl_re=gsiftp://(stkendca|fndca)[^/]*.fnal.gov:*[0-9]*
 lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
 default_doors=stkendca01a.fnal.gov stkendca02a.fnal.gov stkendca03a.fnal.gov stkendca04a.fnal.gov stkendca05a.fnal.gov stkendca06a.fnal.gov stkendca11a.fnal.gov stkendca12a.fnal.gov stkendca13a.fnal.gov stkendca14a.fnal.gov stkendca15a.fnal.gov stkendca16a.fnal.gov stkendca19a.fnal.gov stkendca20a.fnal.gov stkendca25a.fnal.gov stkendca26a.fnal.gov stkendca27a.fnal.gov stkendca28a.fnal.gov stkendca31a.fnal.gov stkendca32a.fnal.gov stkendca33a.fnal.gov stkendca34a.fnal.gov stkendca35a.fnal.gov stkendca36a.fnal.gov stkendca37a.fnal.gov stkendca38a.fnal.gov stkendca39a.fnal.gov stkendca40a.fnal.gov stkendca41a.fnal.gov stkendca42a.fnal.gov stkendca43a.fnal.gov stkendca44a.fnal.gov stkendca45a.fnal.gov stkendca46a.fnal.gov stkendca47a.fnal.gov stkendca48a.fnal.gov stkendca49a.fnal.gov stkendca50a.fnal.gov stkendca51a.fnal.gov stkendca52a.fnal.gov stkendca60a.fnal.gov
+
+[location cern_eos]
+need_cpn_lock=0
+protocols=gsiftp:
+prefix_gsiftp=gsiftp://eospublicftp.cern.ch
 
 [location dcache_stken]
 need_cpn_lock=0
