percent test wasn't in config checker

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -329,7 +329,7 @@ lss_cmd=ils  %(src)s
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
-ll_cmd=ils -l %(recusion_flag)s %(src)s
+ll_cmd=ils -l %(recursion_flag)s %(src)s
 # this needs fixing
 lss_re1=(.*) (.*)  
 mv_cmd=imv %(src)s %(dst)s
