testing config change to turn on file:// preference again

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -164,7 +164,8 @@ protocols=file: gsiftp: srm:
 prefix_file=
 prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
 prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
-#can_stat=file://
+can_stat_gsiftp=file://
+can_stat_srm=file://
 
 [location bluearc_nolock]
 need_cpn_lock=0
@@ -172,7 +173,8 @@ protocols=file: gsiftp: srm:
 prefix_file=
 prefix_gsiftp=gsiftp://fg-bestman1.fnal.gov:2811
 prefix_srm=srm://fg-bestman1.fnal.gov:10443/srm/v2/server?SFN=
-#can_stat=file://
+can_stat_gsiftp=file://
+can_stat_srm=file://
 
 [prefix i://]
 location = generic_irods
