fix for bug #16745

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -148,7 +148,7 @@ need_cpn_lock=0
 # was:
 # protocols=file:
 # do we need this?
-protocols=file: srm: gsiftp: http: https: s3: ucondb: gs:
+protocols=file: srm: gsiftp: http: https: s3: ucondb: gs: root:
 prefix_file=
 prefix_http=
 prefix_https=
