patch for ifdhc_config

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -374,8 +374,8 @@ lss_fake_popen = 1
 lss_skip=0
 lss_size_last=0
 lss_dir_last=0
-lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s[A-Z].{11}\s*()([^/]*)\s*$
-lss_re2 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s*[A-Z].{11}\s*(/.*/)([^/]*)\s*$
+lss_re1 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s\s*[A-Z].{11}\s\s*()([^/]*)\s*$
+lss_re2 = ([-dl])[-rwxst]{9}\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*[a-zA-Z0-9_]*\s*([0-9]*)\s\s*[A-Z].{11}\s\s*(/.*/)([^/]*)\s*$
 ll_cmd=uberftp -ls %(r)s %(src)s
 mv_cmd=dst="%(dst)s";  uberftp -rename %(src)s /${dst\#*://*/}
 chmod_cmd=uberftp -chmod %(mode)s  %(src)s
