bits to turn off rotation at CERN for now on dcache doors

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -4,11 +4,12 @@ EXPERIMENT_LOCK=(annie|argoneut|cdms|coupp|darkside|des|ds50|dune|gm2|lar1nd|lar
 EXPERIMENT_NOLOCK=(auger|btev|captmnv|cepa|chips|ckm|cpad|e990|geant4|GM2|genie|icarus|lartpc|lbnewc|minerva|miniboone|noble|nusoft|patriot|sciboone|Simons)
 
 [general]
-conditionals=gfal macos smu_onsite
+conditionals=gfal macos cern_tier0 smu_onsite 
 rotations=stken_gsiftp cdfen_gsiftp
 
 protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot:
 prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ /pnfs/ /eos/ /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
+
 
 [experiment_vo]
 numrules=5
@@ -30,6 +31,10 @@ rename_proto=srm-gfal: srm:
 [conditional macos]
 test=-x /usr/bin/update_dyld_shared_cache
 rename_proto=gsiftp-apple: gsiftp:
+
+[conditional cern_tier0]
+test=-H *.fnal.gov
+rename_rot=tier0_stken_gsiftp stken_gsiftp
 
 [prefix /eos/]
 location=cern_eos
@@ -208,6 +213,7 @@ prefix_xroot=root://cdfdca1.fnal.gov:1094/pnfs/fnal.gov/usr/cdfen/
 test=-H *.smu.edu
 rename_loc=smuscratch-onsite smuscratch
 
+
 [prefix /scratch/users/]
 slashstrip=0
 location=smuscratch
@@ -232,6 +238,11 @@ prefix_srm=srm://d0dca1.fnal.gov:8443/srm:/managerv2?SFN=/pnfs/fnal.gov/usr/dzer
 prefix_root=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
 prefix_xroot=root://d0dca1.fnal.gov:1094/pnfs/fnal.gov/usr/dzero
 
+[rotation tier0_stken_gsiftp]
+door_proto=gsiftp
+door_repl_re=xxxxxx
+lookup_door_uri=
+default_doors=
 
 [rotation stken_gsiftp]
 door_proto=gsiftp
@@ -246,7 +257,7 @@ prefix_gsiftp=gsiftp://eospublicftp.cern.ch
 
 [location dcache_stken]
 need_cpn_lock=0
-protocols=gsiftp: srm: root: https:
+protocols=gsiftp: srm: root: https: 
 lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
 door_repl_re=://(stkendca|fndca)[^/]*.fnal.gov
 prefix_file=/pnfs/
