config check passes

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -4,10 +4,10 @@ EXPERIMENT_LOCK=(annie|argoneut|cdms|coupp|darkside|des|ds50|dune|gm2|lar1nd|lar
 EXPERIMENT_NOLOCK=(auger|btev|captmnv|cepa|chips|ckm|cpad|e990|geant4|GM2|genie|icarus|lartpc|lbnewc|minerva|miniboone|noble|nusoft|patriot|sciboone|Simons)
 
 [general]
-conditionals=gfal macos cern_tier0 smu_onsite 
+conditionals=gfal macos cern_tier0 cern_tier0_2 smu_onsite 
 rotations=stken_gsiftp cdfen_gsiftp
 
-protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot:
+protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot: gsiftp-apple: tier0-gsiftp: srm-gfal:
 prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ /pnfs/ /eos/ /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
 
 
@@ -33,8 +33,12 @@ test=-x /usr/bin/update_dyld_shared_cache
 rename_proto=gsiftp-apple: gsiftp:
 
 [conditional cern_tier0]
-test=-H *.fnal.gov
+test=-H *.cern.ch
 rename_rot=tier0_stken_gsiftp stken_gsiftp
+
+[conditional cern_tier0_2]
+test=-H *.cern.ch
+rename_proto=gsiftp-tier0: gisftp:
 
 [prefix /eos/]
 location=cern_eos
@@ -148,6 +152,10 @@ slashstrip=0
 location=generic_http
 slashstrip=0
 
+[prefix ucondb:]
+location=generic_http
+slashstrip=0
+
 [location local_fs]
 need_cpn_lock=0
 # was:
@@ -157,6 +165,7 @@ protocols=file: srm: gsiftp: http: https: s3: ucondb: gs: root:
 prefix_file=
 prefix_http=
 prefix_https=
+prefix_root=
 prefix_s3=
 prefix_gs=
 prefix_ucondb=
@@ -372,6 +381,32 @@ rm_cmd=false
 rmdir_cmd=false
 pin_cmd=false
 
+#
+# same as gsiftp except turning *off* gridftp2 force it throught the front door
+#
+[protocol tier0-gsiftp:]
+need_proxy=1
+extra_env=IFDH_GRIDFTP_EXTRA
+extra_env2=IFDH_GSIFTP_EXTRA
+strip_file_prefix=0
+cp_cmd=globus-url-copy -rst-retries 1 -nogridftp2 -nodcau -restart -stall-timeout 14400 %(extra)s %(src)s %(dst)s
+cp_r_cmd=globus-url-copy -cd -rst-retries 1 -nogridftp2 -nodcau -restart -stall-timeout 14400 -r %(extra)s %(src)s/ %(dst)s/
+lss_cmd=uberftp -ls %(src)s
+# remember to take this back out...
+lss_fake_popen = 1
+lss_skip=0
+lss_size_last=0
+lss_dir_last=0
+lss_re1 = ([-dl])[-rwxst]{9}\s*.*\s([0-9][0-9]*)\s\s*[A-Z].{11}\s\s*()([^/]*)\s*$
+lss_re2 = ([-dl])[-rwxst]{9}\s*.*\s([0-9][0-9]*)\s\s*[A-Z].{11}\s\s*(/.*/)([^/]*)\s*$
+ll_cmd=uberftp -ls %(r)s %(src)s
+mv_cmd=dst="%(dst)s";  uberftp -rename %(src)s /${dst\#*://*/}
+chmod_cmd=uberftp -chmod %(mode)s  %(src)s
+mkdir_cmd=uberftp -mkdir  %(src)s
+rm_cmd=uberftp -rm  %(src)s
+rmdir_cmd=uberftp -rmdir  %(src)s
+pin_cmd=
+
 [protocol gsiftp:]
 need_proxy=1
 extra_env=IFDH_GRIDFTP_EXTRA
@@ -549,7 +584,7 @@ lss_dir_last=
 pin_cmd=
 
 [protocol ucondb:]
-strip_file_prefix=
+strip_file_prefix=0
 need_proxy=
 extra_env=
 extra_env2=
