remove last vestiges of tier0 hacks

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -4,10 +4,10 @@ EXPERIMENT_LOCK=(annie|argoneut|cdms|coupp|darkside|des|ds50|dune|gm2|lar1nd|lar
 EXPERIMENT_NOLOCK=(auger|btev|captmnv|cepa|chips|ckm|cpad|e990|geant4|GM2|genie|icarus|lartpc|lbnewc|minerva|miniboone|noble|nusoft|patriot|sciboone|Simons)
 
 [general]
-conditionals=gfal macos cern_tier0 cern_tier0_2 smu_onsite 
+conditionals=gfal macos smu_onsite 
 rotations=stken_gsiftp cdfen_gsiftp
 
-protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot: gsiftp-apple: tier0-gsiftp: srm-gfal:
+protocols=file: https: http: ucondb: gsiftp: srm:  i: s3: gs: D0: root: xroot: gsiftp-apple: srm-gfal:
 prefixes=D0: /pnfs/dzero/ /pnfs/cdfen/ /pnfs/fnal.gov/usr/%(EXPERIMENT)s/ /pnfs/ /eos/ /scratch/users/ /%(EXPERIMENT_NOLOCK)s/ /%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_LOCK)s/ /grid/(app|data|fermiapp)/%(EXPERIMENT_NOLOCK)s/ srm://cdfca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ srm://d0dca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/ root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/ xroot://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/  gsiftp://cdfdca1/pnfs/fnal.gov/usr/cdfen/ https://fndca4a.fnal.gov:2880/pnfs/ http:// https:// s3:// gs:// gsiftp:// srm:// xroot:// root:// file:/// i:// ucondb: /
 
 
