don't fail if getpwent returns nothing

--- a/util/Makefile
+++ b/util/Makefile
@@ -26,7 +26,7 @@ utils-test: utils.cc
 	g++ -o $@ $(TESTDEFS) $(CXXFLAGS) $<
 
 %-test: %.cc
-	g++ -o $@ $(TESTDEFS) $(CXXFLAGS) $< $utils.o
+	g++ -o $@ $(TESTDEFS) $(CXXFLAGS) $< utils.o
 
 
 %.o: %.cc
