adding config bits for getexperiment() group->experiment mapping for issue #18005

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -24,6 +24,26 @@ repl4=fermilab:/fermilab
 match5=(.*)
 repl5=fermilab:/fermilab/$1
 
+[gid_exp]
+gidexplist=annie auger darkside des dune gm2 larp lsst minerva minos minosplus mu2e next nova seaquest uboone 
+gids_annie=	9467
+gids_auger=	5314
+gids_darkside=  9985
+gids_des=	9620
+gids_dune=	9010 9660
+gids_gm2=	9113 9950 9167
+gids_larp=	9469
+gids_lsst=	9157
+gids_minerva=	9253 9555
+gids_minos=	5111
+gids_minosplus=	9209
+gids_mu2e=	9101 9112 9195 9226 9270 9272 9914
+gids_next=	9471
+# 1004 is nova at SMU...
+gids_nova=	1004  9553
+gids_seaquest=	6269 8975
+gids_uboone=	9257 9258 9259 9260 9261 9262 9937 9952
+
 [conditional gfal]
 test=-x /usr/bin/gfal-copy
 rename_proto=srm-gfal: srm:
