--- a/numsg/Makefile
+++ b/numsg/Makefile
@@ -3,7 +3,7 @@ VPATH=$(SRCDIR)
 
 BIN=numsg-test nulogprintf
 LIB=LibNuMsg.a
-UTLOBJ=../util/SyslogAPI.o ../util/utils.o
+UTLOBJ=../util/SyslogAPI.o ../util/utils.o ../util/WimpyConfigParser.o
 OBJ=numsg.o
 HDR=numsg.h
 LOG_OBJ= nulogprintf.o $(OBJ)
