--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -45,7 +45,7 @@ gids_seaquest=	6269 8975
 gids_uboone=	9257 9258 9259 9260 9261 9262 9937 9952
 
 [conditional gfal]
-test=-x /usr/bin/gfal-copy
+test=-x /usr/bin/gfal-copy-hide
 rename_proto=srm-gfal: srm:
 
 [conditional macos]
@@ -280,7 +280,7 @@ lookup_door_uri=http://fndca.fnal.gov:2288/info/doors
 door_repl_re=://(stkendca|fndca)[^/]*.fnal.gov
 prefix_file=/pnfs/
 prefix_gsiftp=gsiftp://fndca1.fnal.gov/pnfs/fnal.gov/usr/
-prefix_srm=srm://fndca1.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/
+prefix_srm=srm://fndca4a.fnal.gov:8443/srm/managerv2?SFN=/pnfs/fnal.gov/usr/
 prefix_root=root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/
 prefix_xroot=root://fndca1.fnal.gov:1094/pnfs/fnal.gov/usr/
 prefix_https=https://fndca4a.fnal.gov:2880/pnfs/fnal.gov/usr/
