testing change left in

--- a/ifdh.cfg
+++ b/ifdh.cfg
@@ -45,7 +45,7 @@ gids_seaquest=	6269 8975
 gids_uboone=	9257 9258 9259 9260 9261 9262 9937 9952
 
 [conditional gfal]
-test=-x /usr/bin/gfal-copy-hide
+test=-x /usr/bin/gfal-copy
 rename_proto=srm-gfal: srm:
 
 [conditional macos]
